# aws-automation

./: main.py  pyproject.toml
utils/: aws_init.py
