[tool.poetry]
name = "aws-python-automation"
version = "0.1.0"
description = ""
authors = ["hydsoled <dapkhazishvili@gmail.com>"]
readme = "README.md"
packages = [{include = "aws_python_automation"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.139"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
